# haskell-logstream

./: logstream.cabal
Data/: LogStream.hs
